--- a/Jsp Works/ProjectM/WebContent/WEB-INF/web.xml
+++ b/Jsp Works/ProjectM/WebContent/WEB-INF/web.xml
@@ -16,7 +16,11 @@
 		        <url-pattern>*.css</url-pattern>  
 		    </servlet-mapping>
 		  
-		  
+ <servlet-mapping>  
+		        <servlet-name>default</servlet-name>  
+		        <url-pattern>*.jpg</url-pattern>  
+		    </servlet-mapping> 
+  		  
 		  
 		    <servlet-mapping>  
 		        <servlet-name>default</servlet-name>  
